COZMO-15369 Code Lab fixes inner corner from bleeding out of glossary #6297

--- a/unity/Cozmo/Assets/StreamingAssets/Scratch/css/glossary.css
+++ b/unity/Cozmo/Assets/StreamingAssets/Scratch/css/glossary.css
@@ -218,7 +218,7 @@ body.show-glossary-modal #glossary-modal {
     background-position: 0 -30px;
   }
   #glossary #definitions-outer {
-    padding: 15px 5px 15px 15px;
+    padding: 15px;
   }
   #glossary #glossary-categories {
     zoom: .8;
